# tracking-ui

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  LICENSE  Makefile  README.md  SECURITY.md  cookiecutter-config-file.yml  docker-compose.yml  pyproject.toml  requirements.txt  setup.cfg
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: question.md
.github/workflows/: build.yml  preview.yml  release.yml
__frontend/: Dockerfile  README.md
_frontend/: .eslintrc.js
athena/: athena.md  athena.py
backend/: Dockerfile  __init__.py  alembic.ini  conftest.py  pyproject.toml  requirements.txt  settings.py
backend/app/: initial_data.py  main.py
backend/app/alembic/: env.py
backend/app/api/api_v1/routers/: auth.py  users.py
backend/app/core/: auth.py  security.py
backend/app/db/: crud.py  models.py  session.py
backend/services/: __init__.py  workflow_utils.py
backend/services/athena/: __init__.py  athena.py  config.py
backend/templates/: form-athena.html
backend/web/: __init__.py  application.py  lifetime.py
backend/web/api/: __init__.py
backend/web/api/monitoring/: __init__.py
backend/web/api/react/: views.py
deploy/: Dockerfile  docker-compose.dev.yml  docker-compose.yml
docker/: README.md
docs/: fastapi-react-slim.md  quick-start-notes.md
frontend/: README.md  package-lock.json  package.json
frontend/src/: App.js  index.js  listing.js
frontend/src/components/: Header.jsx  Todos.jsx
nginx/: nginx.conf
tests/test_example/: test_hello.py
tracking_ui/: __init__.py  __main__.py  conftest.py
tracking_ui/services/: workflow_utils.py  workflows.py
tracking_ui/services/athena/: athena.md  athena.py  athena_data.csv  config.py  utils.py
tracking_ui/templates/: display-athena-resp-json.html  go-get-data.html
tracking_ui/tests/: __init__.py  test_tracking_ui.py
tracking_ui/web/: application.py
tracking_ui/web/api/: router.py
tracking_ui/web/api/athena/: __init__.py  sample_data.py  views.py
tracking_ui/web/api/monitoring/: views.py
tracking_ui/web/api/react/: __init__.py  (+1 more)
(+2 files in other folders)
