[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
alembic = "^1.11.1"
authlib = "^1.2.1"
fastapi = "^0.100.0"
redis = "^4.6.0"
httpx = "^0.24.1"
ipython = "^8.14.0"
itsdangerous = "^2.1.2"
jinja2 = "^3.1.2"
psycopg2 = "^2.9.6"
pytest = "^7.4.0"
requests = "^2.31.0"
sqlalchemy = "^2.0.19"
uvicorn = "^0.23.1"
passlib = "^1.7.4"
bcrypt = "^4.0.1"
sqlalchemy-utils = "^0.41.1"
python-multipart = "^0.0.6"
pyjwt = "^2.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
